# SPDX-License-Identifier: MIT
# Copyright © Andy Maloney <asmaloney@gmail.com>

target_sources( ${PROJECT_NAME}
	PRIVATE
		${CMAKE_CURRENT_LIST_DIR}/AutoSegmentationTools.h
		${CMAKE_CURRENT_LIST_DIR}/BoundingBox.h
		${CMAKE_CURRENT_LIST_DIR}/CCConst.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib.h
		${CMAKE_CURRENT_LIST_DIR}/CCGeom.h
		${CMAKE_CURRENT_LIST_DIR}/CCMath.h
		${CMAKE_CURRENT_LIST_DIR}/CCMiscTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCPlatform.h
		${CMAKE_CURRENT_LIST_DIR}/CCShareable.h
		${CMAKE_CURRENT_LIST_DIR}/CCToolbox.h
		${CMAKE_CURRENT_LIST_DIR}/CCTypes.h
		${CMAKE_CURRENT_LIST_DIR}/ChamferDistanceTransform.h
		${CMAKE_CURRENT_LIST_DIR}/CloudSamplingTools.h
		${CMAKE_CURRENT_LIST_DIR}/ConjugateGradient.h
		${CMAKE_CURRENT_LIST_DIR}/Delaunay2dMesh.h
		${CMAKE_CURRENT_LIST_DIR}/DgmOctree.h
		${CMAKE_CURRENT_LIST_DIR}/DgmOctreeReferenceCloud.h
		${CMAKE_CURRENT_LIST_DIR}/DistanceComputationTools.h
		${CMAKE_CURRENT_LIST_DIR}/ErrorFunction.h
		${CMAKE_CURRENT_LIST_DIR}/FastMarching.h
		${CMAKE_CURRENT_LIST_DIR}/FastMarchingForPropagation.h
		${CMAKE_CURRENT_LIST_DIR}/Garbage.h
		${CMAKE_CURRENT_LIST_DIR}/GenericCloud.h
		${CMAKE_CURRENT_LIST_DIR}/GenericDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/GenericIndexedCloud.h
		${CMAKE_CURRENT_LIST_DIR}/GenericIndexedCloudPersist.h
		${CMAKE_CURRENT_LIST_DIR}/GenericIndexedMesh.h
		${CMAKE_CURRENT_LIST_DIR}/GenericMesh.h
		${CMAKE_CURRENT_LIST_DIR}/GenericOctree.h
		${CMAKE_CURRENT_LIST_DIR}/GenericProgressCallback.h
		${CMAKE_CURRENT_LIST_DIR}/GenericTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/GeometricalAnalysisTools.h
		${CMAKE_CURRENT_LIST_DIR}/Grid3D.h
		${CMAKE_CURRENT_LIST_DIR}/Jacobi.h
		${CMAKE_CURRENT_LIST_DIR}/KdTree.h
		${CMAKE_CURRENT_LIST_DIR}/LocalModel.h
		${CMAKE_CURRENT_LIST_DIR}/ManualSegmentationTools.h
		${CMAKE_CURRENT_LIST_DIR}/MathTools.h
		${CMAKE_CURRENT_LIST_DIR}/MeshSamplingTools.h
		${CMAKE_CURRENT_LIST_DIR}/Neighbourhood.h
		${CMAKE_CURRENT_LIST_DIR}/NormalDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/ParallelSort.h
		${CMAKE_CURRENT_LIST_DIR}/PointCloud.h
		${CMAKE_CURRENT_LIST_DIR}/PointCloudTpl.h
		${CMAKE_CURRENT_LIST_DIR}/PointProjectionTools.h
		${CMAKE_CURRENT_LIST_DIR}/Polyline.h
		${CMAKE_CURRENT_LIST_DIR}/RayAndBox.h
		${CMAKE_CURRENT_LIST_DIR}/ReferenceCloud.h
		${CMAKE_CURRENT_LIST_DIR}/RegistrationTools.h
		${CMAKE_CURRENT_LIST_DIR}/SaitoSquaredDistanceTransform.h
		${CMAKE_CURRENT_LIST_DIR}/ScalarField.h
		${CMAKE_CURRENT_LIST_DIR}/ScalarFieldTools.h
		${CMAKE_CURRENT_LIST_DIR}/SimpleMesh.h
		${CMAKE_CURRENT_LIST_DIR}/SimpleTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/SquareMatrix.h
		${CMAKE_CURRENT_LIST_DIR}/StatisticalTestingTools.h
		${CMAKE_CURRENT_LIST_DIR}/TrueKdTree.h
		${CMAKE_CURRENT_LIST_DIR}/WeibullDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ACosEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/AdaptiveSkeletonClimbing2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/AdaptiveSkeletonClimbing3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/AlignedBox.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/APConversion.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/APInterval.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprCircle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprCone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprCylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprEllipse2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprEllipseByArcs.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprEllipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprGaussian2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprGaussian3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprGreatCircle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprHeightLine2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprHeightPlane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprOrthogonalLine2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprOrthogonalLine3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprOrthogonalPlane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprParaboloid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprPolynomial2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprPolynomial3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprPolynomial4.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprPolynomialSpecial2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprPolynomialSpecial3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprPolynomialSpecial4.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprQuadratic2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprQuadratic3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprQuery.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprSphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ApprTorus3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ArbitraryPrecision.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Arc2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Array2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Array3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Array4.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ASinEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ATanEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/AtomicMinMax.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/AxisAngle.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BandedMatrix.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BasisFunction.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BezierCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BitHacks.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BoxManager.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSNumber.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineCurveFit.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineGeodesic.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineReduction.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineSurface.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineSurfaceFit.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSplineVolume.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSPPolygon2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSPrecision.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/BSRational.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Capsule.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ChebyshevRatio.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CholeskyDecomposition.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Circle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CLODPolyline.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Cone.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConformalMapGenus0.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConstrainedDelaunay2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContAlignedBox.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContCapsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContCircle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContCone.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContCylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContEllipse2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContEllipse2MinCR.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContEllipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContEllipsoid3MinCR.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContLozenge3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContOrientedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContOrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContPointInPolygon2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContPointInPolyhedron3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContScribeCircle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContScribeCircle3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ContSphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConvertCoordinates.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConvexHull2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConvexHull3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConvexMesh3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ConvexPolyhedron3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CosEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CubicRootsQR.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CurvatureFlow2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CurvatureFlow3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CurveExtractor.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CurveExtractorSquares.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/CurveExtractorTriangles.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DarbouxFrame.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DCPQuery.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Delaunay2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Delaunay2Mesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Delaunay3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Delaunay3Mesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DisjointIntervals.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DisjointRectangles.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistAlignedBox3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistAlignedBoxAlignedBox.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistCircle3Circle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLine3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLine3Circle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLine3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLine3Rectangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLine3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLineLine.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLineRay.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistLineSegment.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistOrientedBox3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3Circle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3ConvexPolyhedron3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3Frustum3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3Plane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3Rectangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPoint3Tetrahedron3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointAlignedBox.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointHyperellipsoid.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointLine.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointOrientedBox.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointRay.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointSegment.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistPointTriangleExact.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRay3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRay3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRay3Rectangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRay3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRayRay.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRaySegment.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRectangle3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRectangle3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistRectangle3Rectangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistSegment3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistSegment3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistSegment3Rectangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistSegment3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistSegmentSegment.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistSegmentSegmentExact.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistTriangle3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistTriangle3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistTriangle3Rectangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/DistTriangle3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/EdgeKey.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Ellipse3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/EllipsoidGeodesic.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ETManifoldMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ETNonmanifoldMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/EulerAngles.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Exp2Estimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ExpEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ExtremalQuery3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ExtremalQuery3BSP.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ExtremalQuery3PRJ.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FastGaussianBlur1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FastGaussianBlur2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FastGaussianBlur3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FastMarch.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FastMarch2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FastMarch3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FeatureKey.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FIQuery.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FPInterval.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/FrenetFrame.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Frustum3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GaussianBlur2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GaussianBlur3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GaussianElimination.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GaussNewtonMinimizer.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GenerateMeshUV.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GMatrix.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GradientAnisotropic2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GradientAnisotropic3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/GVector.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Halfspace.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Histogram.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Hyperellipsoid.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Hyperplane.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Hypersphere.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IEEEBinary.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IEEEBinary16.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Image.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Image2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Image3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ImageUtility2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ImageUtility3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IndexAttribute.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Integration.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpAkima1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpAkimaNonuniform1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpAkimaUniform1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpAkimaUniform2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpAkimaUniform3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpBicubic2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpBilinear2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpBSplineUniform.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpLinearNonuniform2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpLinearNonuniform3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpQuadraticNonuniform2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpSphere2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpThinPlateSpline2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpThinPlateSpline3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpTricubic3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpTrilinear3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntpVectorField2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox2AlignedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox2Circle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox2OrientedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox3Cone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrAlignedBox3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrArc2Arc2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrCapsule3Capsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrCircle2Arc2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrCircle2Circle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrConvexMesh3Plane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrConvexPolygonHyperplane.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrDisk2Sector2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrEllipse2Ellipse2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrEllipsoid3Ellipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace2Polygon2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3Capsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3Ellipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3Segment3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrHalfspace3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrIntervals.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2AlignedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2Arc2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2Circle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2Line2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2OrientedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2Ray2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2Segment2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine2Triangle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Capsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Cone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Ellipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Plane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrLine3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox2Circle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox2Cone2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox2OrientedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox2Sector2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox3Cone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox3Frustum3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrOrientedBox3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Capsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Circle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Ellipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Plane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrPlane3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2AlignedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2Arc2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2Circle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2OrientedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2Ray2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2Segment2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay2Triangle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Capsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Cone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Ellipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Plane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrRay3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment2AlignedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment2Arc2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment2Circle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment2OrientedBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment2Segment2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment2Triangle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3AlignedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Capsule3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Cone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Cylinder3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Ellipsoid3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Plane3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSegment3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSphere3Cone3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSphere3Frustum3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSphere3Sphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrSphere3Triangle3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrTriangle2Triangle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IntrTriangle3OrientedBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/InvSqrtEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/IsPlanarGraph.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LCPSolver.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LevenbergMarquardtMinimizer.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LexicoArray2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Line.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LinearSystem.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Log2Estimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LogEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Logger.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LogToFile.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LogToStdout.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/LogToStringArray.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Lozenge3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MarchingCubes.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MassSpringArbitrary.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MassSpringCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MassSpringSurface.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MassSpringVolume.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Math.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Matrix.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Matrix2x2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Matrix3x3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Matrix4x4.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Mesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MeshCurvature.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinHeap.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinimalCycleBasis.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Minimize1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinimizeN.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinimumAreaBox2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinimumAreaCircle2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinimumVolumeBox3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/MinimumVolumeSphere3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NaturalSplineCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NearestNeighborQuery.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NURBSCircle.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NURBSCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NURBSSphere.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NURBSSurface.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/NURBSVolume.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OBBTreeOfPoints.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OdeEuler.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OdeImplicitEuler.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OdeMidpoint.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OdeRungeKutta4.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OdeSolver.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/OrientedBox.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ParametricCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ParametricSurface.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ParticleSystem.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PdeFilter.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PdeFilter1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PdeFilter2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PdeFilter3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PlanarMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Polygon2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PolyhedralMassProperties.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Polyhedron3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Polynomial1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PolynomialCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PrimalQuery2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/PrimalQuery3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Projection.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/QFNumber.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/QuadricSurface.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/QuarticRootsQR.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Quaternion.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RangeIteration.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Ray.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Rectangle.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RectangleManager.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RectangleMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RectanglePatchMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RevolutionMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RiemannianGeodesic.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RigidBody.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RootsBisection.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RootsBisection1.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RootsBisection2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RootsBrentsMethod.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/RootsPolynomial.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Rotation.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Sector2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Segment.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SeparatePoints2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SeparatePoints3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SharedPtrCompare.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SinEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SingularValueDecomposition.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SlerpEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SplitMeshByPlane.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SqrtEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/StringUtility.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SurfaceExtractor.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SurfaceExtractorCubes.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SurfaceExtractorMC.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SurfaceExtractorTetrahedra.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SymmetricEigensolver.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SymmetricEigensolver2x2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/SymmetricEigensolver3x3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TanEstimate.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TCBSplineCurve.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Tetrahedron3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TetrahedronKey.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ThreadSafeMap.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/ThreadSafeQueue.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TIQuery.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Torus3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Transform.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Triangle.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TriangleKey.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TriangulateCDT.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TriangulateEC.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TSManifoldMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/TubeMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/UIntegerALU32.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/UIntegerAP32.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/UIntegerFP32.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/UniqueVerticesTriangles.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/UnsymmetricEigenvalues.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Vector.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Vector2.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Vector3.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/Vector4.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/VEManifoldMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/VertexAttribute.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/VertexCollapseMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/VETManifoldMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/VETNonmanifoldMesh.h
		${CMAKE_CURRENT_LIST_DIR}/Mathematics/WeakPtrCompare.h
)

install(
	FILES
		AutoSegmentationTools.h
		BoundingBox.h
		CCConst.h
		CCCoreLib.h
		CCGeom.h
		CCMiscTools.h
		CCPlatform.h
		CCShareable.h
		CCToolbox.h
		CCTypes.h
		ChamferDistanceTransform.h
		CloudSamplingTools.h
		ConjugateGradient.h
		Delaunay2dMesh.h
		DgmOctree.h
		DgmOctreeReferenceCloud.h
		DistanceComputationTools.h
		ErrorFunction.h
		FastMarching.h
		FastMarchingForPropagation.h
		Garbage.h
		GenericCloud.h
		GenericDistribution.h
		GenericIndexedCloud.h
		GenericIndexedCloudPersist.h
		GenericIndexedMesh.h
		GenericMesh.h
		GenericOctree.h
		GenericProgressCallback.h
		GenericTriangle.h
		GeometricalAnalysisTools.h
		Grid3D.h
		Jacobi.h
		KdTree.h
		LocalModel.h
		ManualSegmentationTools.h
		MathTools.h
		MeshSamplingTools.h
		Neighbourhood.h
		NormalDistribution.h
		ParallelSort.h
		PointCloud.h
		PointCloudTpl.h
		PointProjectionTools.h
		Polyline.h
		RayAndBox.h
		ReferenceCloud.h
		RegistrationTools.h
		SaitoSquaredDistanceTransform.h
		ScalarField.h
		ScalarFieldTools.h
		SimpleMesh.h
		SimpleTriangle.h
		SquareMatrix.h
		StatisticalTestingTools.h
		TrueKdTree.h
		WeibullDistribution.h
		Mathematics/ACosEstimate.h
		Mathematics/AdaptiveSkeletonClimbing2.h
		Mathematics/AdaptiveSkeletonClimbing3.h
		Mathematics/AlignedBox.h
		Mathematics/APConversion.h
		Mathematics/APInterval.h
		Mathematics/ApprCircle2.h
		Mathematics/ApprCone3.h
		Mathematics/ApprCylinder3.h
		Mathematics/ApprEllipse2.h
		Mathematics/ApprEllipseByArcs.h
		Mathematics/ApprEllipsoid3.h
		Mathematics/ApprGaussian2.h
		Mathematics/ApprGaussian3.h
		Mathematics/ApprGreatCircle3.h
		Mathematics/ApprHeightLine2.h
		Mathematics/ApprHeightPlane3.h
		Mathematics/ApprOrthogonalLine2.h
		Mathematics/ApprOrthogonalLine3.h
		Mathematics/ApprOrthogonalPlane3.h
		Mathematics/ApprParaboloid3.h
		Mathematics/ApprPolynomial2.h
		Mathematics/ApprPolynomial3.h
		Mathematics/ApprPolynomial4.h
		Mathematics/ApprPolynomialSpecial2.h
		Mathematics/ApprPolynomialSpecial3.h
		Mathematics/ApprPolynomialSpecial4.h
		Mathematics/ApprQuadratic2.h
		Mathematics/ApprQuadratic3.h
		Mathematics/ApprQuery.h
		Mathematics/ApprSphere3.h
		Mathematics/ApprTorus3.h
		Mathematics/ArbitraryPrecision.h
		Mathematics/Arc2.h
		Mathematics/Array2.h
		Mathematics/Array3.h
		Mathematics/Array4.h
		Mathematics/ASinEstimate.h
		Mathematics/ATanEstimate.h
		Mathematics/AtomicMinMax.h
		Mathematics/AxisAngle.h
		Mathematics/BandedMatrix.h
		Mathematics/BasisFunction.h
		Mathematics/BezierCurve.h
		Mathematics/BitHacks.h
		Mathematics/BoxManager.h
		Mathematics/BSNumber.h
		Mathematics/BSplineCurve.h
		Mathematics/BSplineCurveFit.h
		Mathematics/BSplineGeodesic.h
		Mathematics/BSplineReduction.h
		Mathematics/BSplineSurface.h
		Mathematics/BSplineSurfaceFit.h
		Mathematics/BSplineVolume.h
		Mathematics/BSPPolygon2.h
		Mathematics/BSPrecision.h
		Mathematics/BSRational.h
		Mathematics/Capsule.h
		Mathematics/ChebyshevRatio.h
		Mathematics/CholeskyDecomposition.h
		Mathematics/Circle3.h
		Mathematics/CLODPolyline.h
		Mathematics/Cone.h
		Mathematics/ConformalMapGenus0.h
		Mathematics/ConstrainedDelaunay2.h
		Mathematics/ContAlignedBox.h
		Mathematics/ContCapsule3.h
		Mathematics/ContCircle2.h
		Mathematics/ContCone.h
		Mathematics/ContCylinder3.h
		Mathematics/ContEllipse2.h
		Mathematics/ContEllipse2MinCR.h
		Mathematics/ContEllipsoid3.h
		Mathematics/ContEllipsoid3MinCR.h
		Mathematics/ContLozenge3.h
		Mathematics/ContOrientedBox2.h
		Mathematics/ContOrientedBox3.h
		Mathematics/ContPointInPolygon2.h
		Mathematics/ContPointInPolyhedron3.h
		Mathematics/ContScribeCircle2.h
		Mathematics/ContScribeCircle3Sphere3.h
		Mathematics/ContSphere3.h
		Mathematics/ConvertCoordinates.h
		Mathematics/ConvexHull2.h
		Mathematics/ConvexHull3.h
		Mathematics/ConvexMesh3.h
		Mathematics/ConvexPolyhedron3.h
		Mathematics/CosEstimate.h
		Mathematics/CubicRootsQR.h
		Mathematics/CurvatureFlow2.h
		Mathematics/CurvatureFlow3.h
		Mathematics/CurveExtractor.h
		Mathematics/CurveExtractorSquares.h
		Mathematics/CurveExtractorTriangles.h
		Mathematics/Cylinder3.h
		Mathematics/DarbouxFrame.h
		Mathematics/DCPQuery.h
		Mathematics/Delaunay2.h
		Mathematics/Delaunay2Mesh.h
		Mathematics/Delaunay3.h
		Mathematics/Delaunay3Mesh.h
		Mathematics/DisjointIntervals.h
		Mathematics/DisjointRectangles.h
		Mathematics/DistAlignedBox3OrientedBox3.h
		Mathematics/DistAlignedBoxAlignedBox.h
		Mathematics/DistCircle3Circle3.h
		Mathematics/DistLine3AlignedBox3.h
		Mathematics/DistLine3Circle3.h
		Mathematics/DistLine3OrientedBox3.h
		Mathematics/DistLine3Rectangle3.h
		Mathematics/DistLine3Triangle3.h
		Mathematics/DistLineLine.h
		Mathematics/DistLineRay.h
		Mathematics/DistLineSegment.h
		Mathematics/DistOrientedBox3OrientedBox3.h
		Mathematics/DistPoint3Circle3.h
		Mathematics/DistPoint3ConvexPolyhedron3.h
		Mathematics/DistPoint3Cylinder3.h
		Mathematics/DistPoint3Frustum3.h
		Mathematics/DistPoint3Plane3.h
		Mathematics/DistPoint3Rectangle3.h
		Mathematics/DistPoint3Tetrahedron3.h
		Mathematics/DistPointAlignedBox.h
		Mathematics/DistPointHyperellipsoid.h
		Mathematics/DistPointLine.h
		Mathematics/DistPointOrientedBox.h
		Mathematics/DistPointRay.h
		Mathematics/DistPointSegment.h
		Mathematics/DistPointTriangle.h
		Mathematics/DistPointTriangleExact.h
		Mathematics/DistRay3AlignedBox3.h
		Mathematics/DistRay3OrientedBox3.h
		Mathematics/DistRay3Rectangle3.h
		Mathematics/DistRay3Triangle3.h
		Mathematics/DistRayRay.h
		Mathematics/DistRaySegment.h
		Mathematics/DistRectangle3AlignedBox3.h
		Mathematics/DistRectangle3OrientedBox3.h
		Mathematics/DistRectangle3Rectangle3.h
		Mathematics/DistSegment3AlignedBox3.h
		Mathematics/DistSegment3OrientedBox3.h
		Mathematics/DistSegment3Rectangle3.h
		Mathematics/DistSegment3Triangle3.h
		Mathematics/DistSegmentSegment.h
		Mathematics/DistSegmentSegmentExact.h
		Mathematics/DistTriangle3AlignedBox3.h
		Mathematics/DistTriangle3OrientedBox3.h
		Mathematics/DistTriangle3Rectangle3.h
		Mathematics/DistTriangle3Triangle3.h
		Mathematics/EdgeKey.h
		Mathematics/Ellipse3.h
		Mathematics/EllipsoidGeodesic.h
		Mathematics/ETManifoldMesh.h
		Mathematics/ETNonmanifoldMesh.h
		Mathematics/EulerAngles.h
		Mathematics/Exp2Estimate.h
		Mathematics/ExpEstimate.h
		Mathematics/ExtremalQuery3.h
		Mathematics/ExtremalQuery3BSP.h
		Mathematics/ExtremalQuery3PRJ.h
		Mathematics/FastGaussianBlur1.h
		Mathematics/FastGaussianBlur2.h
		Mathematics/FastGaussianBlur3.h
		Mathematics/FastMarch.h
		Mathematics/FastMarch2.h
		Mathematics/FastMarch3.h
		Mathematics/FeatureKey.h
		Mathematics/FIQuery.h
		Mathematics/FPInterval.h
		Mathematics/FrenetFrame.h
		Mathematics/Frustum3.h
		Mathematics/GaussianBlur2.h
		Mathematics/GaussianBlur3.h
		Mathematics/GaussianElimination.h
		Mathematics/GaussNewtonMinimizer.h
		Mathematics/GenerateMeshUV.h
		Mathematics/GMatrix.h
		Mathematics/GradientAnisotropic2.h
		Mathematics/GradientAnisotropic3.h
		Mathematics/GVector.h
		Mathematics/Halfspace.h
		Mathematics/Histogram.h
		Mathematics/Hyperellipsoid.h
		Mathematics/Hyperplane.h
		Mathematics/Hypersphere.h
		Mathematics/IEEEBinary.h
		Mathematics/IEEEBinary16.h
		Mathematics/Image.h
		Mathematics/Image2.h
		Mathematics/Image3.h
		Mathematics/ImageUtility2.h
		Mathematics/ImageUtility3.h
		Mathematics/IndexAttribute.h
		Mathematics/Integration.h
		Mathematics/IntpAkima1.h
		Mathematics/IntpAkimaNonuniform1.h
		Mathematics/IntpAkimaUniform1.h
		Mathematics/IntpAkimaUniform2.h
		Mathematics/IntpAkimaUniform3.h
		Mathematics/IntpBicubic2.h
		Mathematics/IntpBilinear2.h
		Mathematics/IntpBSplineUniform.h
		Mathematics/IntpLinearNonuniform2.h
		Mathematics/IntpLinearNonuniform3.h
		Mathematics/IntpQuadraticNonuniform2.h
		Mathematics/IntpSphere2.h
		Mathematics/IntpThinPlateSpline2.h
		Mathematics/IntpThinPlateSpline3.h
		Mathematics/IntpTricubic3.h
		Mathematics/IntpTrilinear3.h
		Mathematics/IntpVectorField2.h
		Mathematics/IntrAlignedBox2AlignedBox2.h
		Mathematics/IntrAlignedBox2Circle2.h
		Mathematics/IntrAlignedBox2OrientedBox2.h
		Mathematics/IntrAlignedBox3AlignedBox3.h
		Mathematics/IntrAlignedBox3Cone3.h
		Mathematics/IntrAlignedBox3Cylinder3.h
		Mathematics/IntrAlignedBox3OrientedBox3.h
		Mathematics/IntrAlignedBox3Sphere3.h
		Mathematics/IntrArc2Arc2.h
		Mathematics/IntrCapsule3Capsule3.h
		Mathematics/IntrCircle2Arc2.h
		Mathematics/IntrCircle2Circle2.h
		Mathematics/IntrConvexMesh3Plane3.h
		Mathematics/IntrConvexPolygonHyperplane.h
		Mathematics/IntrDisk2Sector2.h
		Mathematics/IntrEllipse2Ellipse2.h
		Mathematics/IntrEllipsoid3Ellipsoid3.h
		Mathematics/IntrHalfspace2Polygon2.h
		Mathematics/IntrHalfspace3Capsule3.h
		Mathematics/IntrHalfspace3Cylinder3.h
		Mathematics/IntrHalfspace3Ellipsoid3.h
		Mathematics/IntrHalfspace3OrientedBox3.h
		Mathematics/IntrHalfspace3Segment3.h
		Mathematics/IntrHalfspace3Sphere3.h
		Mathematics/IntrHalfspace3Triangle3.h
		Mathematics/IntrIntervals.h
		Mathematics/IntrLine2AlignedBox2.h
		Mathematics/IntrLine2Arc2.h
		Mathematics/IntrLine2Circle2.h
		Mathematics/IntrLine2Line2.h
		Mathematics/IntrLine2OrientedBox2.h
		Mathematics/IntrLine2Ray2.h
		Mathematics/IntrLine2Segment2.h
		Mathematics/IntrLine2Triangle2.h
		Mathematics/IntrLine3AlignedBox3.h
		Mathematics/IntrLine3Capsule3.h
		Mathematics/IntrLine3Cone3.h
		Mathematics/IntrLine3Cylinder3.h
		Mathematics/IntrLine3Ellipsoid3.h
		Mathematics/IntrLine3OrientedBox3.h
		Mathematics/IntrLine3Plane3.h
		Mathematics/IntrLine3Sphere3.h
		Mathematics/IntrLine3Triangle3.h
		Mathematics/IntrOrientedBox2Circle2.h
		Mathematics/IntrOrientedBox2Cone2.h
		Mathematics/IntrOrientedBox2OrientedBox2.h
		Mathematics/IntrOrientedBox2Sector2.h
		Mathematics/IntrOrientedBox3Cone3.h
		Mathematics/IntrOrientedBox3Cylinder3.h
		Mathematics/IntrOrientedBox3Frustum3.h
		Mathematics/IntrOrientedBox3OrientedBox3.h
		Mathematics/IntrOrientedBox3Sphere3.h
		Mathematics/IntrPlane3Capsule3.h
		Mathematics/IntrPlane3Circle3.h
		Mathematics/IntrPlane3Cylinder3.h
		Mathematics/IntrPlane3Ellipsoid3.h
		Mathematics/IntrPlane3OrientedBox3.h
		Mathematics/IntrPlane3Plane3.h
		Mathematics/IntrPlane3Sphere3.h
		Mathematics/IntrPlane3Triangle3.h
		Mathematics/IntrRay2AlignedBox2.h
		Mathematics/IntrRay2Arc2.h
		Mathematics/IntrRay2Circle2.h
		Mathematics/IntrRay2OrientedBox2.h
		Mathematics/IntrRay2Ray2.h
		Mathematics/IntrRay2Segment2.h
		Mathematics/IntrRay2Triangle2.h
		Mathematics/IntrRay3AlignedBox3.h
		Mathematics/IntrRay3Capsule3.h
		Mathematics/IntrRay3Cone3.h
		Mathematics/IntrRay3Cylinder3.h
		Mathematics/IntrRay3Ellipsoid3.h
		Mathematics/IntrRay3OrientedBox3.h
		Mathematics/IntrRay3Plane3.h
		Mathematics/IntrRay3Sphere3.h
		Mathematics/IntrRay3Triangle3.h
		Mathematics/IntrSegment2AlignedBox2.h
		Mathematics/IntrSegment2Arc2.h
		Mathematics/IntrSegment2Circle2.h
		Mathematics/IntrSegment2OrientedBox2.h
		Mathematics/IntrSegment2Segment2.h
		Mathematics/IntrSegment2Triangle2.h
		Mathematics/IntrSegment3AlignedBox3.h
		Mathematics/IntrSegment3Capsule3.h
		Mathematics/IntrSegment3Cone3.h
		Mathematics/IntrSegment3Cylinder3.h
		Mathematics/IntrSegment3Ellipsoid3.h
		Mathematics/IntrSegment3OrientedBox3.h
		Mathematics/IntrSegment3Plane3.h
		Mathematics/IntrSegment3Sphere3.h
		Mathematics/IntrSegment3Triangle3.h
		Mathematics/IntrSphere3Cone3.h
		Mathematics/IntrSphere3Frustum3.h
		Mathematics/IntrSphere3Sphere3.h
		Mathematics/IntrSphere3Triangle3.h
		Mathematics/IntrTriangle2Triangle2.h
		Mathematics/IntrTriangle3OrientedBox3.h
		Mathematics/InvSqrtEstimate.h
		Mathematics/IsPlanarGraph.h
		Mathematics/LCPSolver.h
		Mathematics/LevenbergMarquardtMinimizer.h
		Mathematics/LexicoArray2.h
		Mathematics/Line.h
		Mathematics/LinearSystem.h
		Mathematics/Log2Estimate.h
		Mathematics/LogEstimate.h
		Mathematics/Logger.h
		Mathematics/LogToFile.h
		Mathematics/LogToStdout.h
		Mathematics/LogToStringArray.h
		Mathematics/Lozenge3.h
		Mathematics/MarchingCubes.h
		Mathematics/MassSpringArbitrary.h
		Mathematics/MassSpringCurve.h
		Mathematics/MassSpringSurface.h
		Mathematics/MassSpringVolume.h
		Mathematics/Math.h
		Mathematics/Matrix.h
		Mathematics/Matrix2x2.h
		Mathematics/Matrix3x3.h
		Mathematics/Matrix4x4.h
		Mathematics/Mesh.h
		Mathematics/MeshCurvature.h
		Mathematics/MinHeap.h
		Mathematics/MinimalCycleBasis.h
		Mathematics/Minimize1.h
		Mathematics/MinimizeN.h
		Mathematics/MinimumAreaBox2.h
		Mathematics/MinimumAreaCircle2.h
		Mathematics/MinimumVolumeBox3.h
		Mathematics/MinimumVolumeSphere3.h
		Mathematics/NaturalSplineCurve.h
		Mathematics/NearestNeighborQuery.h
		Mathematics/NURBSCircle.h
		Mathematics/NURBSCurve.h
		Mathematics/NURBSSphere.h
		Mathematics/NURBSSurface.h
		Mathematics/NURBSVolume.h
		Mathematics/OBBTreeOfPoints.h
		Mathematics/OdeEuler.h
		Mathematics/OdeImplicitEuler.h
		Mathematics/OdeMidpoint.h
		Mathematics/OdeRungeKutta4.h
		Mathematics/OdeSolver.h
		Mathematics/OrientedBox.h
		Mathematics/ParametricCurve.h
		Mathematics/ParametricSurface.h
		Mathematics/ParticleSystem.h
		Mathematics/PdeFilter.h
		Mathematics/PdeFilter1.h
		Mathematics/PdeFilter2.h
		Mathematics/PdeFilter3.h
		Mathematics/PlanarMesh.h
		Mathematics/Polygon2.h
		Mathematics/PolyhedralMassProperties.h
		Mathematics/Polyhedron3.h
		Mathematics/Polynomial1.h
		Mathematics/PolynomialCurve.h
		Mathematics/PrimalQuery2.h
		Mathematics/PrimalQuery3.h
		Mathematics/Projection.h
		Mathematics/QFNumber.h
		Mathematics/QuadricSurface.h
		Mathematics/QuarticRootsQR.h
		Mathematics/Quaternion.h
		Mathematics/RangeIteration.h
		Mathematics/Ray.h
		Mathematics/Rectangle.h
		Mathematics/RectangleManager.h
		Mathematics/RectangleMesh.h
		Mathematics/RectanglePatchMesh.h
		Mathematics/RevolutionMesh.h
		Mathematics/RiemannianGeodesic.h
		Mathematics/RigidBody.h
		Mathematics/RootsBisection.h
		Mathematics/RootsBisection1.h
		Mathematics/RootsBisection2.h
		Mathematics/RootsBrentsMethod.h
		Mathematics/RootsPolynomial.h
		Mathematics/Rotation.h
		Mathematics/Sector2.h
		Mathematics/Segment.h
		Mathematics/SeparatePoints2.h
		Mathematics/SeparatePoints3.h
		Mathematics/SharedPtrCompare.h
		Mathematics/SinEstimate.h
		Mathematics/SingularValueDecomposition.h
		Mathematics/SlerpEstimate.h
		Mathematics/SplitMeshByPlane.h
		Mathematics/SqrtEstimate.h
		Mathematics/StringUtility.h
		Mathematics/SurfaceExtractor.h
		Mathematics/SurfaceExtractorCubes.h
		Mathematics/SurfaceExtractorMC.h
		Mathematics/SurfaceExtractorTetrahedra.h
		Mathematics/SymmetricEigensolver.h
		Mathematics/SymmetricEigensolver2x2.h
		Mathematics/SymmetricEigensolver3x3.h
		Mathematics/TanEstimate.h
		Mathematics/TCBSplineCurve.h
		Mathematics/Tetrahedron3.h
		Mathematics/TetrahedronKey.h
		Mathematics/ThreadSafeMap.h
		Mathematics/ThreadSafeQueue.h
		Mathematics/TIQuery.h
		Mathematics/Torus3.h
		Mathematics/Transform.h
		Mathematics/Triangle.h
		Mathematics/TriangleKey.h
		Mathematics/TriangulateCDT.h
		Mathematics/TriangulateEC.h
		Mathematics/TSManifoldMesh.h
		Mathematics/TubeMesh.h
		Mathematics/UIntegerALU32.h
		Mathematics/UIntegerAP32.h
		Mathematics/UIntegerFP32.h
		Mathematics/UniqueVerticesTriangles.h
		Mathematics/UnsymmetricEigenvalues.h
		Mathematics/Vector.h
		Mathematics/Vector2.h
		Mathematics/Vector3.h
		Mathematics/Vector4.h
		Mathematics/VEManifoldMesh.h
		Mathematics/VertexAttribute.h
		Mathematics/VertexCollapseMesh.h
		Mathematics/VETManifoldMesh.h
		Mathematics/VETNonmanifoldMesh.h
		Mathematics/WeakPtrCompare.h
	DESTINATION
		include/CCCoreLib
)

target_include_directories( ${PROJECT_NAME}
	PUBLIC
		$<INSTALL_INTERFACE:include/CCCoreLib>
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

